--- a/project/package.json
+++ b/project/package.json
@@ -2,20 +2,23 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/AntonAnatoliyovich/SoftRyzen-testwork",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-svg": "^16.1.31",
+    "styled-components": "^6.1.1",
+    "swiper": "^11.0.5",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:js": "eslint src/**/*.{js,jsx}"
   },
   "eslintConfig": {
     "extends": [
